# my_ai_friend

./: .gitignore  Cargo.toml  README.md  config.json  download-ggml-model.sh
src/: main.rs
src/tools/: mod.rs  time.rs  timeout.rs
